test skill section fix(text alignment fixing)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,21 +149,24 @@ h1 {
 
 .skill-item {
     margin: 15px 0;
-    text-align: left;
-    color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: #fff;
 }
 
 .skill-name {
     font-weight: bold;
     letter-spacing: 1px;
+    flex-basis: 20%;
+    text-align: left;
 }
 
 .skill-percentage {
     font-weight: bold;
     letter-spacing: 1px;
+    flex-basis: 10%;
+    text-align: right;
 }
 
 .skill-bar {
@@ -173,7 +176,7 @@ h1 {
     border-radius: 4px;
     overflow: hidden;
     position: relative;
-    width: 70%;
+    width: 65%;
     margin-left: 10px;
 }
 
@@ -194,7 +197,18 @@ h1 {
         font-size: 1.8rem;
     }
 
-    .skill-percentage {
-        font-size: 0.9rem;
+    .skill-item {
+        flex-wrap: wrap;
+        text-align: center;
+    }
+
+    .skill-name, .skill-percentage {
+        flex-basis: 100%;
+        margin-bottom: 5px;
+    }
+
+    .skill-bar {
+        width: 100%;
+        margin-left: 0;
     }
 }
